force-app/main/default/objects/client_objective_timeseries_rollup__c/client_objective_timeseries_rollup__c.object-meta.xml
<CustomObject>
    <label>Client Objective Timeseries Rollup</label>
    <nameField>
        <displayFormat>COTSRU-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Objective Timeseries Rollup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>