force-app/main/default/objects/client_objective_timeseries_rollup__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>client_objective_timeseries_rollup</relationshipName>
    <type>Lookup</type>
</CustomField>