force-app/main/default/objects/client_objective_timeseries_rollup__c/fields/Mastered__c.field-meta.xml
<CustomField>
    <fullName>Mastered__c</fullName>
    <formula>IF(OR(Status__c=&apos;ABS&apos;,Status__c==&apos;ACQ&apos;), statuscount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mastered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>