force-app/main/default/objects/client_objective_timeseries_rollup__c/fields/RunDateTime__c.field-meta.xml
<CustomField>
    <fullName>RunDateTime__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>RunDateTime</label>
    <type>DateTime</type>
</CustomField>