force-app/main/default/objects/client_objective_timeseries_rollup__c/fields/Runid__c.field-meta.xml
<CustomField>
    <fullName>Runid__c</fullName>
    <label>Runid</label>
    <length>20</length>
    <type>Text</type>
</CustomField>