force-app/main/default/objects/client_objective_timeseries_rollup__c/fields/statuscount__c.field-meta.xml
<CustomField>
    <fullName>statuscount__c</fullName>
    <label>StatusCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>