force-app/main/default/objects/client_objective_timeseries_rollup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>RunDateTime__c</columns>
    <columns>Runid__c</columns>
    <columns>Status__c</columns>
    <columns>statuscount__c</columns>
    <columns>Client__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>